# sigma-discord-solana-wallet

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  wrangler.jsonc
docs/: index.html
pages/: index.html
programs/discord-wallet/: Cargo.toml
programs/discord-wallet/src/: lib.rs  sigverify.rs
programs/discord-wallet/tests/: integration.rs  litesvm.rs
scripts/: deploy-localnet-program.sh
src/: bot-runtime.ts  bytes.ts  cloudflare.ts  constants.ts  discord-api.ts  discord.ts  executor.ts  index.ts  program.ts  real-e2e.ts  rpc.ts  send-v1-transfer.ts  server.ts  sync-discord.ts  tunnel.ts  worker.ts
