[package]
name = "discord-wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "discord_wallet"

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio = { version = "0.10", features = ["cpi"] }
pinocchio-system = "0.5"
pinocchio-token = "0.5"
solana-address = { version = "2", features = ["curve25519", "decode"] }
solana-program-log = "1.1.0"
solana-sdk-ids = "3"

[dev-dependencies]
litesvm = { version = "0.11", features = ["precompiles"] }
litesvm-token = "0.11"
solana-clock = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-program-pack = "3"
solana-signer = "3"
solana-system-interface = "2"
solana-transaction = "3"
solana-transaction-error = "3"
spl-associated-token-account-interface = "2"
